# localsecret-rs

./: Cargo.toml  README.md
examples/: hex.rs  pg.rs  testnet.rs
src/: account.rs  client.rs  consts.rs  crypto.rs  docker.rs  lib.rs
src/client/: query.rs  tx.rs  types.rs
src/crypto/: cert.rs
test-contract/: Cargo.toml  Makefile.toml
test-contract/src/: handle.rs  init.rs  lib.rs  query.rs
tests/: it.rs
