[package]
name = "localsecret"
authors = ["Chris Ricketts <chris_ricketts@proton_mail.com"]
version = "0.1.0"
edition = "2021"

[dependencies]
cosmwasm-std = { version = "0.10", package = "secret-cosmwasm-std" }
prost = "0.10"
cosmrs = { git = "https://github.com/chris-ricketts/cosmos-rust", branch = "secret", features = [
  "bip32",
  "secret-cosmwasm",
  "dev",
] }
bip39 = "1.0"
bip32 = "0.3"
tokio = { version = "1.19", features = ["rt"] }
thiserror = "1.0.31"
serde = "1.0"
base64 = "0.13.0"
serde_json = "1.0.81"
nanorand = "0.7.0"
x25519-dalek = "1.2.0"
hkdf = "0.12.3"
sha2 = "0.10.2"
aes-siv = "0.6.2"
hex = "0.4.3"
