[package]
name = "localsecret"
authors = ["Chris Ricketts <chris_ricketts@proton_mail.com"]
version = "0.0.1"
edition = "2021"

[lib]
doctest = false

[dependencies]
cosmwasm-std = { version = "0.10", package = "secret-cosmwasm-std" }
prost = "0.10"
# TODO: ideally remove this dependency for something more lightweight
cosmrs = { git = "https://github.com/chris-ricketts/cosmos-rust", branch = "secret", features = [
  "bip32",
  "secret-cosmwasm",
  "dev",
] }
bip39 = "1.0"
bip32 = "0.3"
tokio = { version = "1.19", features = ["rt"] }
thiserror = "1.0.31"
serde = "1.0"
base64 = "0.13.0"
serde_json = "1.0.81"
nanorand = "0.7.0"
x25519-dalek = "1.2.0"
hkdf = "0.12.3"
sha2 = "0.10.2"
# TODO: use crates.io once 0.7 is published
aes-siv = { git = "https://github.com/RustCrypto/AEADs" }
hex = "0.4.3"

[dev-dependencies]
test_contract = { path = "test-contract" }

[workspace]
members = ["test-contract"]

[profile.release]
opt-level = 'z'
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
